# INS-mechaization-and-Kalman-Filter-based-GNSS-IMU-integration-

./: CMakeLists.txt  README.md  main.py  package.xml
src/: data_analysis.py  map_data_plot.py
